--- a/templates/EC2-SaltMaster.template
+++ b/templates/EC2-SaltMaster.template
@@ -1,7 +1,7 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
 
-  "Description": "Create a EC2 instance.",
+  "Description": "Create a EC2 instance as a salt-master.",
 
   "Parameters": {
     "EC2Name": {
