--- a/templates/EC2-Basic-Windows.template
+++ b/templates/EC2-Basic-Windows.template
@@ -1,7 +1,7 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
 
-  "Description": "Create a EC2 instance.",
+  "Description": "Create a EC2 instance (Windows Server).",
 
   "Parameters": {
     "EC2Name": {
@@ -14,8 +14,7 @@
     },
     "AMI": {
       "Type": "AWS::EC2::Image::Id",
-      "Description": "The AMI ID of the image that the EC2 instance to be created from (check and update to use the latest Ubuntu).",
-      "Default": "ami-4e686b2d"
+      "Description": "The AMI ID of the image that the EC2 instance to be created from (check and update to use the latest Windows Server)."
     },
     "InstanceType": {
       "Type": "String",
@@ -59,31 +58,12 @@
       "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
       "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
     },
-    "SaltMasterHost": {
-      "Type": "String",
-      "Description": "Optional. Hostname (or private IP) of the Salt Master.",
-      "Default": ""
-    },
-    "SaltVersion": {
-      "Type": "String",
-      "Description": "Optional. Salt-minion version to be installed.",
-      "Default": "2016.11.3"
-    },
     "ServiceTag": {
       "Type": "String",
       "Description": "Value of the tag Service",
       "Default": "vm",
       "AllowedValues": ["vm", "openvpn"],
       "ConstraintDescription": "must be a predefined Tag."
-    }
-  },
-
-  "Conditions": {
-    "SaltEnabled": {
-      "Fn::And": [
-        {"Fn::Not": [{"Fn::Equals": ["", {"Ref": "SaltMasterHost"}]}]},
-        {"Fn::Not": [{"Fn::Equals": ["", {"Ref": "SaltVersion"}]}]}
-      ]
     }
   },
 
@@ -99,25 +79,6 @@
         "IamInstanceProfile": { "Ref": "InstanceRole" },
         "KeyName": { "Ref": "KeyName" },
         "Monitoring": "false",
-        "UserData": { "Fn::Base64" : { "Fn::Join" : ["", [
-          "#!/bin/bash -xe\n",
-          "sudo hostname ", { "Ref" : "EC2HostName" }, "\n",
-          "sed -i '1i 127.0.0.1 ", { "Ref" : "EC2HostName" }, " ' /etc/hosts\n",
-          "echo ", { "Ref" : "EC2HostName" }, " > /etc/hostname\n",
-          "hostname -F /etc/hostname\n",
-          { "Fn::If": [
-            "SaltEnabled",
-            {
-              "Fn::Join" : ["", [
-                "curl -o bootstrap-salt.sh -L https://bootstrap.saltstack.com\n",
-                "sudo sh bootstrap-salt.sh git v", {"Ref": "SaltVersion"}, "\n",
-                "sed -i -e 's/#master: salt/master: ", {"Ref": "SaltMasterHost"}, "/g' /etc/salt/minion\n",
-                "service salt-minion restart\n"
-              ]]
-            },
-            { "Ref": "AWS::NoValue" }
-          ]}
-        ]]}},
         "NetworkInterfaces": [{
           "AssociatePublicIpAddress": "true",
           "DeleteOnTermination": "true",
