--- a/templates/BaseInfrastructure-Linux-SaltMaster.template
+++ b/templates/BaseInfrastructure-Linux-SaltMaster.template
@@ -5,20 +5,20 @@
 
   "Parameters": {
     "ProjectTag": {
-      "Type": "String",
-      "Description": " tag to be used for tagging related sources."
+      "Description": " tag to be used for tagging related sources.",
+      "Type": "String"
     },
     "VpcCidrFirst2Parts": {
+      "Description": "The first 2 parts of the CIDR (e.g. 60.10) to be assigned to the VPC.",
       "Type": "String",
-      "Description": "The first 2 parts of the CIDR (e.g. 61.10) to be assigned to the VPC.",
       "MinLength": "3",
       "MaxLength": "7",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})",
       "ConstraintDescription": "must be in the form x.x"
     },
     "VpcSubnetZone": {
-      "Type": "AWS::EC2::AvailabilityZone::Name",
       "Description": "The Availability Zone of the default subnet.",
+      "Type": "AWS::EC2::AvailabilityZone::Name",
       "Default": "ap-southeast-2a"
     }
   },
