--- a/templates/EC2-and-SecurityGroup-support-NFS-Rabbitmq.template
+++ b/templates/EC2-and-SecurityGroup-support-NFS-Rabbitmq.template
@@ -5,67 +5,67 @@
 
   "Parameters": {
     "EC2Name": {
-      "Type": "String",
-      "Description": "The name of the EC2."
+      "Description": "The name of the EC2.",
+      "Type": "String"
     },
     "AMI": {
-      "Type": "AWS::EC2::Image::Id",
       "Description": "The AMI ID of the image that the EC2 instance to be created from (check latest Ubuntu AMI image).",
+      "Type": "AWS::EC2::Image::Id",
       "Default": "ami-4e686b2d"
     },
     "InstanceType": {
-      "Type": "String",
       "Description": "EC2 instance type",
+      "Type": "String",
       "Default": "t2.medium",
       "AllowedValues": [ "t1.micro", "t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "m1.small", "m1.medium", "m1.large", "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "m4.large", "m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m4.10xlarge", "c1.medium", "c1.xlarge", "c3.large", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.large", "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "g2.2xlarge", "g2.8xlarge", "r3.large", "r3.xlarge", "r3.2xlarge", "r3.4xlarge", "r3.8xlarge", "i2.xlarge", "i2.2xlarge", "i2.4xlarge", "i2.8xlarge", "d2.xlarge", "d2.2xlarge", "d2.4xlarge", "d2.8xlarge", "hi1.4xlarge", "hs1.8xlarge", "cr1.8xlarge", "cc2.8xlarge", "cg1.4xlarge"],
       "ConstraintDescription": "must be a valid EC2 instance type."
     },
     "InstanceRole": {
-      "Type": "String",
       "Description": "Instance IAM Role.",
+      "Type": "String",
       "Default": "devops",
       "AllowedValues": ["devops"],
       "ConstraintDescription": "must be a valid IAM Role."
     },
     "SubnetID": {
-      "Type": "AWS::EC2::Subnet::Id",
-      "Description": "Subnet ID of the solver servers."
+      "Description": "Subnet ID of the solver servers.",
+      "Type": "AWS::EC2::Subnet::Id"
     },
     "VpcID": {
-      "Type": "AWS::EC2::VPC::Id",
-      "Description": "VPC ID of solver servers."
+      "Description": "VPC ID of solver servers.",
+      "Type": "AWS::EC2::VPC::Id"
     },
     "KeyName": {
-      "Type": "AWS::EC2::KeyPair::KeyName",
       "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance.",
+      "Type": "AWS::EC2::KeyPair::KeyName",
       "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
     },
     "ServiceTag": {
-      "Type": "String",
       "Description": "Value of the tag Service.",
+      "Type": "String",
       "Default": "production",
       "AllowedValues": ["production", "staging"],
       "ConstraintDescription": "must be a predefined tag."
     },
     "RabbitCIDR": {
-      "Type": "String",
       "Description": "IP Address range of the Rabbit MQ (e.g. 62.77.0.0/16).",
+      "Type": "String",
       "MinLength": "9",
       "MaxLength": "18",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
       "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
     },
     "NfsCIDR": {
-      "Type": "String",
       "Description": "IP Address range of the NFS server (e.g. 62.77.0.0/16).",
+      "Type": "String",
       "MinLength": "9",
       "MaxLength": "18",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
       "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
     },
     "VpnCIDR": {
-      "Type": "String",
       "Description": "IP Address range of the VPN server (e.g. 62.99.0.0/16.",
+      "Type": "String",
       "MinLength": "9",
       "MaxLength": "18",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
@@ -78,51 +78,51 @@
     "SecurityGroup": {
       "Type": "AWS::EC2::SecurityGroup",
       "Properties": {
-        "VpcId": { "Ref": "VpcID" },
-        "GroupDescription": { "Ref": "EC2Name" },
+        "VpcId": {"Ref": "VpcID" },
+        "GroupDescription": {"Ref": "EC2Name" },
         "SecurityGroupIngress": [
-          { "IpProtocol": "icmp", "FromPort": "0", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
-          { "IpProtocol": "icmp", "FromPort": "8", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
-          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Ref": "VpnCIDR" } },
-          { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" },
-          { "IpProtocol": "tcp", "FromPort": "2049", "ToPort": "2049", "CidrIp": { "Ref": "NfsCIDR" } },
-          { "IpProtocol": "tcp", "FromPort": "5672", "ToPort": "5672", "CidrIp": { "Ref": "RabbitCIDR" } }
+          {"IpProtocol": "icmp", "FromPort": "0", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
+          {"IpProtocol": "icmp", "FromPort": "8", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
+          {"IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": {"Ref": "VpnCIDR" } },
+          {"IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" },
+          {"IpProtocol": "tcp", "FromPort": "2049", "ToPort": "2049", "CidrIp": {"Ref": "NfsCIDR" } },
+          {"IpProtocol": "tcp", "FromPort": "5672", "ToPort": "5672", "CidrIp": {"Ref": "RabbitCIDR" } }
         ],
         "SecurityGroupEgress": [
-          { "IpProtocol": "-1", "CidrIp": "0.0.0.0/0" }
+          {"IpProtocol": "-1", "CidrIp": "0.0.0.0/0" }
         ],
         "Tags": [
-          { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name",  "Value": { "Ref": "EC2Name" } },
-          { "Key": "Service", "Value": { "Ref": "ServiceTag"} }
+          {"Key": "Application", "Value": {"Ref": "AWS::StackName" } },
+          {"Key": "Name",  "Value": {"Ref": "EC2Name" } },
+          {"Key": "Service", "Value": {"Ref": "ServiceTag"} }
         ]
       }
     },
     "ServerSgIngress": {
       "Type": "AWS::EC2::SecurityGroupIngress",
       "Properties": {
-        "GroupId": { "Ref": "SecurityGroup" },
+        "GroupId": {"Ref": "SecurityGroup" },
         "IpProtocol": "-1",
-        "SourceSecurityGroupId": { "Ref": "SecurityGroup" } ,
-        "SourceSecurityGroupOwnerId": { "Ref": "AWS::AccountId" }
+        "SourceSecurityGroupId": {"Ref": "SecurityGroup" } ,
+        "SourceSecurityGroupOwnerId": {"Ref": "AWS::AccountId" }
       }
     },
 
     "EC2Instance": {
       "Type": "AWS::EC2::Instance",
       "DependsOn": ["SecurityGroup"],
-      "Metadata": { "Comment": "EC2" },
+      "Metadata": {"Comment": "EC2" },
       "Properties": {
         "DisableApiTermination": "false",
         "InstanceInitiatedShutdownBehavior": "stop",
-        "ImageId": { "Ref": "AMI" },
-        "InstanceType": { "Ref": "InstanceType" },
-        "IamInstanceProfile": { "Ref": "InstanceRole" },
-        "KeyName": { "Ref": "KeyName" },
+        "ImageId": {"Ref": "AMI" },
+        "InstanceType": {"Ref": "InstanceType" },
+        "IamInstanceProfile": {"Ref": "InstanceRole" },
+        "KeyName": {"Ref": "KeyName" },
         "BlockDeviceMappings": [
           {
             "DeviceName": "/dev/sda1",
-            "Ebs": { "VolumeType": "gp2", "VolumeSize": "20", "DeleteOnTermination": "false"}
+            "Ebs": {"VolumeType": "gp2", "VolumeSize": "20", "DeleteOnTermination": "false"}
           }
         ],
         "Monitoring": "false",
@@ -131,14 +131,14 @@
           "DeleteOnTermination": "true",
           "Description": "Primary network interface",
           "DeviceIndex": 0,
-          "GroupSet": [{ "Ref": "SecurityGroup" }],
-          "SubnetId": { "Ref": "SubnetID" }
+          "GroupSet": [{"Ref": "SecurityGroup" }],
+          "SubnetId": {"Ref": "SubnetID" }
         }],
         "Tags": [
-          { "Key": "Application", "Value": { "Ref": "AWS::StackName"} },
-          { "Key": "Name", "Value": { "Ref": "EC2Name"} },
-          { "Key": "Inspect", "Value": "ALL" },
-          { "Key": "Service", "Value": { "Ref": "ServiceTag"} }
+          {"Key": "Application", "Value": {"Ref": "AWS::StackName"} },
+          {"Key": "Name", "Value": {"Ref": "EC2Name"} },
+          {"Key": "Inspect", "Value": "ALL" },
+          {"Key": "Service", "Value": {"Ref": "ServiceTag"} }
         ]
       }
     },
@@ -150,11 +150,11 @@
         "Size": "200",
         "VolumeType": "standard",
         "Encrypted": "false",
-        "AvailabilityZone": { "Fn::GetAtt": [ "EC2Instance", "AvailabilityZone" ] },
+        "AvailabilityZone": {"Fn::GetAtt": [ "EC2Instance", "AvailabilityZone" ] },
         "Tags": [
-          { "Key": "Application", "Value": { "Ref": "AWS::StackName"} },
-          { "Key": "Name", "Value": { "Fn::Join": ["", [{"Ref": "EC2Name"}, "-sdf"]]} },
-          { "Key": "Service", "Value": { "Ref": "ServiceTag"} }
+          {"Key": "Application", "Value": {"Ref": "AWS::StackName"} },
+          {"Key": "Name", "Value": {"Fn::Join": ["", [{"Ref": "EC2Name"}, "-sdf"]]} },
+          {"Key": "Service", "Value": {"Ref": "ServiceTag"} }
         ]
       },
       "DeletionPolicy": "Snapshot"
@@ -164,8 +164,8 @@
       "DependsOn": "EBSVolumeSdf",
       "Properties": {
         "Device": "/dev/sdf",
-        "InstanceId": { "Ref": "EC2Instance" },
-        "VolumeId": { "Ref": "EBSVolumeSdf"}
+        "InstanceId": {"Ref": "EC2Instance" },
+        "VolumeId": {"Ref": "EBSVolumeSdf"}
       }
     },
 
@@ -174,7 +174,7 @@
       "DependsOn": ["EC2Instance"],
       "Properties": {
         "Domain": "vpc",
-        "InstanceId": { "Ref": "EC2Instance" }
+        "InstanceId": {"Ref": "EC2Instance" }
       }
     }
   },
@@ -182,11 +182,11 @@
   "Outputs": {
     "PublicIP": {
       "Description": "The public IP address of the instance.",
-      "Value": { "Fn::GetAtt": [ "EC2Instance", "PublicIp" ] }
+      "Value": {"Fn::GetAtt": [ "EC2Instance", "PublicIp" ] }
     },
     "PrivateIP": {
       "Description": "The private IP address of the instance.",
-      "Value": { "Fn::GetAtt": [ "EC2Instance", "PrivateIp" ] }
+      "Value": {"Fn::GetAtt": [ "EC2Instance", "PrivateIp" ] }
     }
   }
 }
