--- a/templates/RDS-SecurityGroup.template
+++ b/templates/RDS-SecurityGroup.template
@@ -5,23 +5,23 @@
 
   "Parameters": {
     "SecurityGroupName": {
-      "Type": "String",
-      "Description": "The name of the Security Group Name tag."
+      "Description": "The name of the Security Group Name tag.",
+      "Type": "String"
     },
     "VpcID": {
-      "Type": "AWS::EC2::VPC::Id",
-      "Description": "VPC ID of the Database"
+      "Description": "VPC ID of the Database",
+      "Type": "AWS::EC2::VPC::Id"
     },
     "ServiceTag": {
-      "Type": "String",
       "Description": "Value of the tag Service",
+      "Type": "String",
       "Default": "staging",
       "AllowedValues": ["production", "staging"],
       "ConstraintDescription": "must be a predefined tag."
     },
     "EC2CIDR": {
-      "Type": "String",
       "Description": "IP Address range of a EC2 allowed connecting to the RDS.",
+      "Type": "String",
       "MinLength": "9",
       "MaxLength": "18",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
@@ -34,33 +34,33 @@
       "Type": "AWS::RDS::DBSecurityGroup",
       "DependsOn": ["SecurityGroup"],
       "Properties": {
-        "EC2VpcId": { "Ref": "VpcID" },
-        "GroupDescription": { "Ref": "SecurityGroupName" },
+        "EC2VpcId": {"Ref": "VpcID" },
+        "GroupDescription": {"Ref": "SecurityGroupName" },
         "DBSecurityGroupIngress": [
-          { "EC2SecurityGroupId": { "Ref": "SecurityGroup" } }
+          {"EC2SecurityGroupId": {"Ref": "SecurityGroup" } }
         ],
         "Tags": [
-          { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name",  "Value": { "Ref": "SecurityGroupName" } },
-          { "Key": "Service", "Value": { "Ref": "ServiceTag" } }
+          {"Key": "Application", "Value": {"Ref": "AWS::StackName" } },
+          {"Key": "Name",  "Value": {"Ref": "SecurityGroupName" } },
+          {"Key": "Service", "Value": {"Ref": "ServiceTag" } }
         ]
       }
     },
     "SecurityGroup": {
       "Type": "AWS::EC2::SecurityGroup",
       "Properties": {
-        "VpcId": { "Ref": "VpcID" },
-        "GroupDescription": { "Ref": "SecurityGroupName" },
+        "VpcId": {"Ref": "VpcID" },
+        "GroupDescription": {"Ref": "SecurityGroupName" },
         "SecurityGroupIngress": [
-          { "IpProtocol": "tcp", "FromPort": "5432", "ToPort": "5432", "CidrIp": { "Ref": "EC2CIDR" } }
+          {"IpProtocol": "tcp", "FromPort": "5432", "ToPort": "5432", "CidrIp": {"Ref": "EC2CIDR" } }
         ],
         "SecurityGroupEgress": [
-          { "IpProtocol": "-1", "CidrIp": "0.0.0.0/0" }
+          {"IpProtocol": "-1", "CidrIp": "0.0.0.0/0" }
         ],
         "Tags": [
-          { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name",  "Value": { "Ref": "SecurityGroupName" } },
-          { "Key": "Service", "Value": { "Ref": "ServiceTag"} }
+          {"Key": "Application", "Value": {"Ref": "AWS::StackName" } },
+          {"Key": "Name",  "Value": {"Ref": "SecurityGroupName" } },
+          {"Key": "Service", "Value": {"Ref": "ServiceTag"} }
         ]
       }
     }
